--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <button class="curriculum">
             <a href="" target="_blank">Currículo</a>
         </button>
-        <div>
+        <div class="designed">
             <p>Designed by Victoria Borges</p>
         </div>
     </div>
